bk_ida/gccida/c2/move_by_pieces
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_by_pieces/src/expr.c:1854:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_by_pieces/src/expr.c:1858:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_by_pieces/src/expr.c:1863:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_by_pieces/src/expr.c:1864:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_by_pieces/src/expr.c:1867:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_by_pieces/src/expr.c:1873:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_by_pieces/src/expr.c:1888:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v40; // [rsp+2Ch] [rbp-6Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_by_pieces/src/expr.c:2039:10: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
genfun = insn_data_0[insn_code].genfun; 
         ^~~~~~~~~~~
         insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_by_pieces/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/move_by_pieces/src/obj/expr.o] Error 1
